force-app/main/default/objects/Site_Visit__c/fields/Accompanied_by__c.field-meta.xml
<CustomField>
    <fullName>Accompanied_by__c</fullName>
    <label>Accompanied by</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alone</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Friends</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>