force-app/main/default/objects/Site_Visit__c/fields/Actual_Sample_Flat__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sample_Flat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actual/Sample Flat</label>
    <type>Checkbox</type>
</CustomField>