force-app/main/default/objects/Site_Visit__c/fields/Conflict_Type__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Type__c</fullName>
    <label>Conflict Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CP-CP</fullName>
            </value>
            <value>
                <fullName>CP-Presales</fullName>
            </value>
            <value>
                <fullName>CP-Reference</fullName>
            </value>
            <value>
                <fullName>Direct-Presales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>