force-app/main/default/objects/Site_Visit__c/fields/Current_Residence_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Current_Residence_Configuration__c</fullName>
    <label>Current Residence  Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Current_Residence_Configuaration</valueSetName>
    </valueSet>
</CustomField>