force-app/main/default/objects/Site_Visit__c/fields/Highest_Education__c.field-meta.xml
<CustomField>
    <fullName>Highest_Education__c</fullName>
    <label>Highest Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Highest_Education</valueSetName>
    </valueSet>
</CustomField>