force-app/main/default/objects/Site_Visit__c/fields/Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Household_Income__c</fullName>
    <label>Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Household_Income</valueSetName>
    </valueSet>
</CustomField>