force-app/main/default/objects/Site_Visit__c/fields/Lead_Sources_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Sources_Description__c</fullName>
    <label>Lead Sources Description</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>