force-app/main/default/objects/Site_Visit__c/fields/Locality__c.field-meta.xml
<CustomField>
    <fullName>Locality__c</fullName>
    <label>Locality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Locality</valueSetName>
    </valueSet>
</CustomField>