force-app/main/default/objects/Site_Visit__c/fields/Master_Source__c.field-meta.xml
<CustomField>
    <fullName>Master_Source__c</fullName>
    <label>Master Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Reference Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>