force-app/main/default/objects/Site_Visit__c/fields/Office_Country__c.field-meta.xml
<CustomField>
    <fullName>Office_Country__c</fullName>
    <label>Office Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>