force-app/main/default/objects/Site_Visit__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>In Follow-up</fullName>
                <default>true</default>
                <label>In Follow-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>