force-app/main/default/objects/Site_Visit__c/fields/Prefered_Location__c.field-meta.xml
<CustomField>
    <fullName>Prefered_Location__c</fullName>
    <label>Prefered Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>