force-app/main/default/objects/Site_Visit__c/fields/Purchase_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Timeframe__c</fullName>
    <label>Purchase Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 to 10 Days</fullName>
            </value>
            <value>
                <fullName>10 to 20 Days</fullName>
            </value>
            <value>
                <fullName>20 to 30 Days</fullName>
            </value>
            <value>
                <fullName>30 to 60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>