force-app/main/default/objects/Site_Visit__c/fields/Sitevisit_Date__c.field-meta.xml
<CustomField>
    <fullName>Sitevisit_Date__c</fullName>
    <label>Sitevisit Date</label>
    <type>DateTime</type>
</CustomField>