force-app/main/default/objects/Site_Visit__c/fields/Source_Details__c.field-meta.xml
<CustomField>
    <fullName>Source_Details__c</fullName>
    <label>Source Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>