force-app/main/default/objects/Site_Visit__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>