force-app/main/default/objects/Site_Visit__c/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <label>Street 2</label>
    <type>TextArea</type>
</CustomField>