force-app/main/default/objects/Site_Visit__c/fields/Walk_In_Sub_Source__c.field-meta.xml
<CustomField>
    <fullName>Walk_In_Sub_Source__c</fullName>
    <label>Walk In Sub-Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Walk_In_Source__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Lead_Sub_Source</valueSetName>
    </valueSet>
</CustomField>