force-app/main/default/objects/Site_Visit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Site_Visit_Count__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Configuration_Required__c</columns>
    <columns>Is_Site_Visit_Complete__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Next_Follow_up_date__c</columns>
    <columns>Project__c</columns>
    <columns>Proposed_Re_visit_Date__c</columns>
    <columns>Walk_In_Source__c</columns>
    <columns>Walk_In_Sub_Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>